Fixing missmatching api result with the documentation
